<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8x"
        android:padding="@dimen/space_4x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/localRouteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feat_main_local_route"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/localRoute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_2x"
            android:textColor="@color/blue_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/localRouteTitle"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Esta es la routa de tu imagen" />

        <TextView
            android:id="@+id/adition_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feat_main_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/localRoute" />

        <TextView
            android:id="@+id/capture_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_2x"
            android:textColor="@color/blue_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/adition_date_title"
            app:layout_constraintTop_toBottomOf="@id/localRoute"

            tools:text="Esta es la fecha de captura de la imagen" />

        <TextView
            android:id="@+id/capture_size_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feat_main_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/capture_date" />

        <TextView
            android:id="@+id/capture_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_2x"
            android:text="@string/feat_main_date"
            android:textColor="@color/blue_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/capture_size_title"
            app:layout_constraintTop_toBottomOf="@id/capture_date"
            tools:text="Este es el tamaño de tu imagen" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
